scan-dispatcher/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-dispatcher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scan-dispatcher
  template:
    metadata:
      labels:
        app: scan-dispatcher
    spec:
      containers:
      - name: dispatcher
        image: ghcr.io/<YOUR_ORG>/scan-dispatcher:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: scan-dispatcher
spec:
  selector:
    app: scan-dispatcher
  ports:
    - port: 80
      targetPort: 3000
